--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "init-db": "node setupDatabase.js",
-    "seed-db": "node data_dummy.js",
-    "test": "node TestAPI.js",
-    "test-load": "node TestAPI.js --load-test"
+    "test": "node scripts/test-api.js",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "setup:db": "node scripts/setup-database.js",
+    "seed:db": "node scripts/seed-data.js",
+    "test:api": "node scripts/test-api.js",
+    "migrate": "node scripts/migrate.js",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "dependencies": {
     "express": "^4.18.2",
