--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "node scripts/test-api.js",
+    "update-coordinates": "node script/update-coordinates.js",
+    "update-schema": "psql -h localhost -U postgres -d fleet_management -f database/update-schema.sql",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "setup:db": "node scripts/setup-database.js",
