--- a/package.json
+++ b/package.json
@@ -19,24 +19,26 @@
     "lint:fix": "eslint src/ --fix"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "joi": "^17.11.0",
-    "moment": "^2.29.4",
-    "compression": "^1.7.4",
-    "helmet": "^7.1.0",
-    "rate-limiter-flexible": "^2.4.2",
+    "@prisma/client": "^6.14.0",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "pg": "^8.11.3",
+    "prisma": "^6.14.0",
+    "rate-limiter-flexible": "^2.4.2",
+    "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "engines": {
