add history tracking

--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "prisma:studio": "prisma studio",
     "prisma:format": "prisma format",
     "prisma:validate": "prisma validate",
+    "prisma:migrate": "prisma migrate deploy",
     "prisma:reset": "prisma migrate reset",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:pull": "prisma db pull",
     "prisma:push": "prisma db push",
+    "seed:history": "node scripts/history-seeder.js",
+    "db:setup": "npm run prisma:generate && npm run prisma:migrate && npm run prisma:seed",
+    "setup:complete": "./setup-fleet-management.sh",
     "prisma:seed": "node scripts/prisma-seed.js",
-    "db:setup": "node scripts/setup-database.js",
     "db:seed": "node scripts/seed-data.js",
     "db:backup": "pg_dump -U postgres -h localhost fleet_management > backup_$(date +%Y%m%d_%H%M%S).sql",
     "db:restore": "psql -U postgres -h localhost -d fleet_management",
