--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:coverage": "jest --coverage",
     "test:api": "node scripts/test-api.js",
     "test:load": "node scripts/test-api.js --load-test --users 20 --duration 60",
+    
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
     "prisma:format": "prisma format",
@@ -20,17 +21,30 @@
     "prisma:deploy": "prisma migrate deploy",
     "prisma:pull": "prisma db pull",
     "prisma:push": "prisma db push",
+    "prisma:seed": "node scripts/prisma-seed.js",
+
     "seed:history": "node scripts/history-seeder.js",
     "db:setup": "npm run prisma:generate && npm run prisma:migrate && npm run prisma:seed",
     "setup:complete": "./setup-fleet-management.sh",
-    "prisma:seed": "node scripts/prisma-seed.js",
     "db:seed": "node scripts/seed-data.js",
     "db:backup": "pg_dump -U postgres -h localhost fleet_management > backup_$(date +%Y%m%d_%H%M%S).sql",
     "db:restore": "psql -U postgres -h localhost -d fleet_management",
     "db:migrate": "node scripts/migrate.js",
     "db:optimize": "node scripts/optimize-database.js",
+
     "update-coordinates": "node scripts/update-coordinates.js",
     "update-schema": "psql -h localhost -U postgres -d fleet_management -f database/update-schema.sql",
+
+    "history:generate": "node scripts/history-seeder.js",
+    "history:generate:week": "node scripts/history-seeder.js --days 7 --delete true",
+    "history:generate:month": "node scripts/history-seeder.js --days 30 --delete true",
+    "history:generate:quick": "node scripts/history-seeder.js --days 1 --limit 10",
+    "history:generate:full": "node scripts/history-seeder.js --days 14 --delete true --batch 500",
+    "history:events": "node scripts/history-utilities.js events",
+    "history:realtime": "node scripts/history-utilities.js realtime",
+    "history:realtime:long": "node scripts/history-utilities.js realtime 240",
+    "history:clean": "node -e \"const {PrismaClient} = require('@prisma/client'); const prisma = new PrismaClient(); prisma.locationHistory.deleteMany().then(r => console.log('Deleted', r.count, 'records'",
+
     "lint": "eslint src/ scripts/ --ext .js",
     "lint:fix": "eslint src/ scripts/ --ext .js --fix",
     "format": "prettier --write \"src/**/*.js\" \"scripts/**/*.js\"",
