--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,27 @@
 PORT=3001
 NODE_ENV=development
 
-# Database Configuration
+# Database Configuration (PostgreSQL)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=fleet_management
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+DB_USER=postgres
+DB_PASSWORD=truk1234
+
+# Prisma Database URL (Required for Prisma)
+DATABASE_URL="postgresql://postgres:truk1234@localhost:5432/fleet_management?schema=public"
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret_here
+JWT_SECRET=fleet-management-secret-key-change-in-production
 JWT_EXPIRES_IN=24h
 
 # CORS Configuration
 FRONTEND_URL=http://localhost:5173
+
+# Logging Configuration
+LOG_LEVEL=info
+ADMIN_LOG_FILE=log/admin-activity.log
+
+# WebSocket Configuration
+WS_PATH=/ws
+WS_PING_INTERVAL=30000
