--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "node scripts/kill-port.js 3001 && nodemon server.js",
+    "dev:clean": "node scripts/kill-port.js 3001",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
