Production deployment ready - Added deployment configs, scripts, and documentation

--- a/.env.example
+++ b/.env.example
@@ -3,21 +3,21 @@ PORT=3001
 NODE_ENV=development
 
 # Database Configuration (PostgreSQL)
-DB_HOST=localhost
+DB_HOST=connectis.my.id
 DB_PORT=5432
-DB_NAME=fleet_management
-DB_USER=postgres
-DB_PASSWORD=truk1234
+DB_NAME=dummy_tracking
+DB_USER=postgre_tpms
+DB_PASSWORD=postgis:14-3.5-alpine
 
 # Prisma Database URL (Required for Prisma)
-DATABASE_URL="postgresql://postgres:truk1234@localhost:5432/fleet_management?schema=public"
+DATABASE_URL="postgresql://postgre_tpms:postgis%3A14-3.5-alpine@connectis.my.id:5432/dummy_tracking?schema=public"
 
 # JWT Configuration
 JWT_SECRET=fleet-management-secret-key-change-in-production
 JWT_EXPIRES_IN=24h
 
 # CORS Configuration
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://connectis.my.id:5173
 
 # Logging Configuration
 LOG_LEVEL=info
